copy 1.21.5 branch, give player better feedback on exception